--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,4 +2,5 @@ eclipse.preferences.version=1
 encoding//src/commands/Clear.java=UTF-8
 encoding//src/commands/GetPointEvent.java=UTF-8
 encoding//src/commands/Returns.java=UTF-8
+encoding//src/commands/Template.java=UTF-8
 encoding//src/commands/shop.java=UTF-8
