--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/bin/
-*.class
+bin/bot_init/LazyJavie.class
+*.prefs
+.settings/org.eclipse.core.resources.prefs
