--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/JDA-4.2.1_262-withDependencies.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.24.jar"/>
-	<classpathentry kind="lib" path="D:/SCHOOL/SCHOOL STUFF GRADE 11/Term4/programming/Discord-LazyJavie/lib/slf4j-api-1.6.1.jar"/>
-	<classpathentry kind="lib" path="D:/SCHOOL/SCHOOL STUFF GRADE 11/Term4/programming/Discord-LazyJavie/lib/slf4j-simple-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-simple-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
