--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-14"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-14">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Froze/.p2/pool/plugins/org.eclipse.osgi_3.16.0.v20200828-0759.jar" sourcepath="C:/Users/Froze/.p2/pool/plugins/org.eclipse.osgi.source_3.16.0.v20200828-0759.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Froze/.p2/pool/plugins/org.eclipse.core.commands_3.9.700.v20191217-1850.jar" sourcepath="C:/Users/Froze/.p2/pool/plugins/org.eclipse.core.commands.source_3.9.700.v20191217-1850.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Froze/.p2/pool/plugins/org.eclipse.equinox.common_3.13.0.v20200828-1034.jar" sourcepath="C:/Users/Froze/.p2/pool/plugins/org.eclipse.equinox.common.source_3.13.0.v20200828-1034.jar"/>
@@ -16,5 +20,6 @@
 	<classpathentry kind="lib" path="C:/Users/Froze/.p2/pool/plugins/org.eclipse.ui.forms_3.10.0.v20200727-0948.jar" sourcepath="C:/Users/Froze/.p2/pool/plugins/org.eclipse.ui.forms.source_3.10.0.v20200727-0948.jar"/>
 	<classpathentry kind="lib" path="lib/JDA-4.2.1_262-withDependencies.jar"/>
 	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.12.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
